# Zygisk-InternalBrowserRedirect

./: README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/ibr/: AppEditActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/res/values-ja/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
hideapi/: build.gradle
hideapi/src/main/java/dalvik/system/: BaseDexClassLoader.java  DexPathList.java
module/: build.gradle
module/src/main/raw/magisk/: customize.sh  module.prop  service.sh  uninstall.sh
remote/: build.gradle
remote/src/main/cpp/: CMakeLists.txt  elf_util.cpp  inject.cc  inject.h  log.h  main.cc  zygisk.hpp
remote/src/main/java/com/github/kr328/ibr/remote/client/: ClientActivityManagerProxy.java  ClientInjector.java
shared/: build.gradle
